--- a/src/gestorproyectos/vista/FXMLAlumno.fxml
+++ b/src/gestorproyectos/vista/FXMLAlumno.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,8 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="gestorproyectos.controller.FXMLAlumnoController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLAlumnoController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -31,5 +31,6 @@
          </font>
       </Label>
       <HBox fx:id="experienciasContenedor" layoutX="37.0" layoutY="98.0" prefHeight="230.0" prefWidth="683.0" />
+      <Button layoutX="14.0" layoutY="561.0" mnemonicParsing="false" onAction="#clickCerrarSesion" text="Cerrar Sesion" />
    </children>
 </AnchorPane>
