--- a/src/gestorproyectos/vista/FXMLCoordinador.fxml
+++ b/src/gestorproyectos/vista/FXMLCoordinador.fxml
@@ -128,7 +128,7 @@
                                                 <TableColumn fx:id="colOrdenPriorizacionSS" prefWidth="114.39995117187499" text="Orden Priorización" />
                                             </columns>
                                           </TableView>
-                                          <Button layoutX="371.0" layoutY="495.0" mnemonicParsing="false" onAction="#clickAsignar" text="Asignar" />
+                                          <Button fx:id="btnAsignar" layoutX="455.0" layoutY="490.0" mnemonicParsing="false" onAction="#clickAsignar" text="Asignar" />
                                           <TableView fx:id="tblAlumnoAsignacionPP" layoutX="32.0" layoutY="130.0" prefHeight="311.0" prefWidth="346.0">
                                              <columns>
                                                 <TableColumn fx:id="colNombreAlumnoAsignacionPP" prefWidth="129.60004425048828" text="Nombre Alumno" />
@@ -144,6 +144,7 @@
                                                 <TableColumn fx:id="colOrdenPriorizacionPP" prefWidth="114.39995117187499" text="Orden Priorización" />
                                              </columns>
                                           </TableView>
+                                          <Button layoutX="312.0" layoutY="490.0" mnemonicParsing="false" onAction="#clickSiguienteAsignación" text="Siguiente" />
                                        </children>
                                     </AnchorPane>
                               </content>
