--- a/src/gestorproyectos/vista/FXMLRegistroExperienciaEducativa.fxml
+++ b/src/gestorproyectos/vista/FXMLRegistroExperienciaEducativa.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="gestorproyectos.controller.FXMLRegistroExperienciaEducativaController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLRegistroExperienciaEducativaController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -30,5 +30,7 @@
       <TextField fx:id="txtFPeriodo" layoutX="183.0" layoutY="318.0" prefHeight="26.0" prefWidth="194.0" promptText="Periodo" />
       <Button layoutX="184.0" layoutY="397.0" mnemonicParsing="false" onAction="#clickCancelar" text="Cancelar" />
       <Button layoutX="621.0" layoutY="397.0" mnemonicParsing="false" onAction="#clickRegistrar" text="Registrar" />
+      <ComboBox fx:id="cBoxProfesor" layoutX="490.0" layoutY="319.0" prefWidth="150.0" />
+      <Label layoutX="490.0" layoutY="291.0" text="Profesor:" textFill="WHITE" />
    </children>
 </AnchorPane>
