--- a/src/gestorproyectos/vista/FXMLEntregaDeArchivo.fxml
+++ b/src/gestorproyectos/vista/FXMLEntregaDeArchivo.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -9,8 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="gestorproyectos.controller.FXMLEntregaDeArchivoController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLEntregaDeArchivoController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -38,5 +42,6 @@
       <TextField fx:id="txtFCantidadHoras" layoutX="245.0" layoutY="456.0" prefHeight="26.0" prefWidth="75.0" />
       <Label layoutX="133.0" layoutY="461.0" text="Cantidad de horas:" textFill="WHITE" />
       <Button layoutX="706.0" layoutY="457.0" mnemonicParsing="false" onAction="#clickEntregar" text="Entregar" />
+      <Label fx:id="lbConfirmacionArchivo" layoutX="429.0" layoutY="361.0" visible="false" />
    </children>
 </AnchorPane>
