--- a/src/gestorproyectos/vista/FXMLExpedienteAlumno.fxml
+++ b/src/gestorproyectos/vista/FXMLExpedienteAlumno.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,8 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="gestorproyectos.controller.FXMLExpedienteAlumnoController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLExpedienteAlumnoController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -68,7 +72,7 @@
       <TableView fx:id="tblDocumentos" layoutX="434.0" layoutY="105.0" prefHeight="149.0" prefWidth="418.0">
         <columns>
           <TableColumn fx:id="colNombreDocumento" prefWidth="296.8000183105469" text="Nombre de documento" />
-          <TableColumn fx:id="colValidar" prefWidth="122.39996337890625" text="Validar" />
+          <TableColumn fx:id="colValidar" prefWidth="122.39996337890625" text="Validado" />
         </columns>
       </TableView>
       <TableView fx:id="tblReportes" layoutX="434.0" layoutY="355.0" prefHeight="149.0" prefWidth="418.0">
@@ -79,5 +83,7 @@
       </TableView>
       <Label layoutX="434.0" layoutY="323.0" text="Reportes:" textFill="WHITE" />
       <Button layoutX="58.0" layoutY="492.0" mnemonicParsing="false" onAction="#clickDarDeBaja" text="Dar de baja" />
+      <Button layoutX="435.0" layoutY="270.0" mnemonicParsing="false" onAction="#clicDescargar" text="Descargar" />
+      <Button layoutX="774.0" layoutY="270.0" mnemonicParsing="false" onAction="#clicValidar" text="Validar" />
    </children>
 </AnchorPane>
