--- a/src/gestorproyectos/vista/FXMLRegistroExperienciaEducativa.fxml
+++ b/src/gestorproyectos/vista/FXMLRegistroExperienciaEducativa.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLRegistroExperienciaEducativaController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLRegistroExperienciaEducativaController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -36,5 +32,6 @@
       <Label layoutX="490.0" layoutY="291.0" text="Profesor:" textFill="WHITE" />
       <ComboBox fx:id="cBoxNombreEE" layoutX="184.0" layoutY="168.0" prefWidth="500.0" />
       <ComboBox fx:id="cBoxPeriodo" layoutX="183.0" layoutY="319.0" prefWidth="195.0" />
+      <Button layoutX="38.0" layoutY="527.0" mnemonicParsing="false" onAction="#clickCancelar" text="Cancelar" />
    </children>
 </AnchorPane>
