--- a/src/gestorproyectos/vista/FXMLRegistroProyecto.fxml
+++ b/src/gestorproyectos/vista/FXMLRegistroProyecto.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -23,17 +22,17 @@
          </image>
       </ImageView>
       <Label layoutX="85.0" layoutY="167.0" text="Nombre Proyecto:" textFill="WHITE" />
-      <Label layoutX="586.0" layoutY="167.0" text="Fecha de inicio:" textFill="WHITE" />
+      <Label layoutX="586.0" layoutY="167.0" text="Periodo:" textFill="WHITE" />
       <Label layoutX="81.0" layoutY="228.0" text="Cupo:" textFill="WHITE" />
       <Label layoutX="85.0" layoutY="290.0" text="Objetivo:" textFill="WHITE" />
       <Label layoutX="469.0" layoutY="290.0" text="Descripción:" textFill="WHITE" />
       <Label layoutX="466.0" layoutY="228.0" text="Responsable:" textFill="WHITE" />
       <TextField fx:id="txtFNombreProyecto" layoutX="82.0" layoutY="185.0" prefHeight="26.0" prefWidth="457.0" promptText="Nombre" />
-      <DatePicker fx:id="dpFechaInicio" layoutX="581.0" layoutY="185.0" prefHeight="26.0" prefWidth="222.0" promptText="Fecha" />
       <TextField fx:id="txtFCupo" layoutX="81.0" layoutY="246.0" prefHeight="26.0" prefWidth="343.0" promptText="Cupo" />
       <ComboBox fx:id="cBoxResponsable" layoutX="464.0" layoutY="246.0" prefHeight="26.0" prefWidth="343.0" promptText="Responsable" />
       <TextArea fx:id="txtAObjetivo" layoutX="82.0" layoutY="308.0" prefHeight="104.0" prefWidth="343.0" />
       <TextArea fx:id="txtADescripcion" layoutX="464.0" layoutY="308.0" prefHeight="104.0" prefWidth="343.0" />
       <Button layoutX="739.0" layoutY="442.0" mnemonicParsing="false" onAction="#clickRegistrar" text="Registrar" />
+      <TextField fx:id="txtFPeriodo" layoutX="586.0" layoutY="186.0" prefHeight="26.0" prefWidth="223.0" promptText="MMMYYYY-MMMYYYY" />
    </children>
 </AnchorPane>
