--- a/src/gestorproyectos/vista/FXMLExpedienteAlumno.fxml
+++ b/src/gestorproyectos/vista/FXMLExpedienteAlumno.fxml
@@ -82,8 +82,9 @@
          </columns>
       </TableView>
       <Label layoutX="434.0" layoutY="323.0" text="Reportes:" textFill="WHITE" />
-      <Button layoutX="58.0" layoutY="492.0" mnemonicParsing="false" onAction="#clickDarDeBaja" text="Dar de baja" />
-      <Button layoutX="435.0" layoutY="270.0" mnemonicParsing="false" onAction="#clicDescargar" text="Descargar" />
-      <Button layoutX="774.0" layoutY="270.0" mnemonicParsing="false" onAction="#clicValidar" text="Validar" />
+      <Button fx:id="btnDarDeBaja" layoutX="58.0" layoutY="492.0" mnemonicParsing="false" onAction="#clickDarDeBaja" text="Dar de baja" />
+      <Button fx:id="btnDescargar" layoutX="435.0" layoutY="270.0" mnemonicParsing="false" onAction="#clicDescargar" text="Descargar" />
+      <Button fx:id="btnValidar" layoutX="774.0" layoutY="270.0" mnemonicParsing="false" onAction="#clicValidar" text="Validar" />
+      <Button fx:id="btnEntregaDeArchivos" layoutX="433.0" layoutY="531.0" mnemonicParsing="false" onAction="#clickEntregaDeArchivos" prefHeight="39.0" prefWidth="175.0" text="Entregar archivos" />
    </children>
 </AnchorPane>
